--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -1426,3 +1426,5 @@
       href: guidance/star-schema.md
     - name: Reduzir o tamanho do modelo de dados
       href: guidance/import-modeling-data-reduction.md
+    - name: Função DIVIDE versus operador dividir (/)
+      href: guidance/dax-divide-function-operator.md
