commit translated contents

--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -939,8 +939,8 @@
           href: report-builder-tables-matrices-lists.md
         - name: Parâmetros
           href: report-builder-parameters.md
-        - name: Expressões
-          href: report-builder-expressions.md
+        - name: URL parameters in paginated reports (Parâmetros de URL em relatórios paginados)
+          href: report-builder-url-parameters.md
         - name: Exemplos de expressões
           href: report-builder-expression-examples.md
         - name: Paginação do relatório
@@ -959,6 +959,8 @@
           href: paginated-reports-create-embedded-dataset.md
         - name: Criar parâmetros
           href: paginated-reports-parameters.md
+        - name: Pass a report parameter in a URL (Aprovar um parâmetro de relatório em uma URL)
+          href: report-builder-url-pass-parameters.md
         - name: Publicar um relatório paginado
           href: paginated-reports-save-to-power-bi-service.md
 - name: Power BI para desenvolvedores
