--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -1358,7 +1358,7 @@
     - name: Recursos
       items:
         - name: Atualizações mensais de gateway
-          href: 'https://review.docs.microsoft.com/data-integration/gateway/service-gateway-monthly-updates?branch=master'
+          href: /data-integration/gateway/service-gateway-monthly-updates
 - name: Administração
   items:
     - name: Visão geral
