--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -903,6 +903,8 @@
       items:
         - name: Comprar o Power BI Premium
           href: service-admin-premium-purchase.md
+        - name: Configurar e gerenciar capacidades
+          href: service-admin-premium-manage.md
         - name: Configurar cargas de trabalho
           href: service-admin-premium-workloads.md
         - name: Monitorar capacidades com o aplicativo
