--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -165,6 +165,8 @@
               href: desktop-connect-to-web.md
             - name: Conectar-se a um warehouse de computação Snowflake no Power BI Desktop
               href: desktop-connect-snowflake.md
+            - name: Conectar-se aos dados de Gerenciamento de Custos do Azure
+              href: desktop-connect-azure-cost-management.md
             - name: Conecte-se aos dados do Azure Consumption Insights
               href: desktop-connect-azure-consumption-insights.md
             - name: Usar o SAP HANA no Power BI Desktop
@@ -217,6 +219,8 @@
               href: desktop-import-and-display-kpis.md
         - name: Criar relatórios
           items:
+            - name: Atualização automática de página no Power BI Desktop (visualização)
+              href: desktop-automatic-page-refresh.md
             - name: Usar o analisador de desempenho no Power BI Desktop
               href: desktop-performance-analyzer.md
             - name: Elementos visuais para relatórios
