commit translated contents

--- a/powerbi-docs/TOC.yml
+++ b/powerbi-docs/TOC.yml
@@ -353,6 +353,8 @@
               href: visuals/power-bi-visualization-kpi.md
             - name: Matrix visual
               href: visuals/desktop-matrix-visual.md
+            - name: Visual de P e R
+              href: visuals/power-bi-visualization-q-and-a.md
             - name: Criar visualizações e análise avançadas usando scripts do R no Power BI
               href: visuals/service-r-visuals.md
             - name: Gráficos de medidor radial no Power BI
@@ -375,6 +377,22 @@
               href: visuals/power-bi-visualization-waterfall-charts.md
             - name: Criar linhas de referência dinâmica
               href: service-analytics-pane.md
+        - name: Linguagem natural
+          items:
+            - name: Introdução às P e R
+              href: natural-language/q-and-a-intro.md
+            - name: Visual de P e R
+              href: visuals/power-bi-visualization-q-and-a.md
+            - name: Introdução às ferramentas de P e R
+              href: natural-language/q-and-a-tooling-intro.md
+            - name: Ferramentas de P e R que ensinam sobre P e R
+              href: natural-language/q-and-a-tooling-teach-q-and-a.md
+            - name: Ferramenta avançada de P e R
+              href: natural-language/q-and-a-tooling-advanced.md
+            - name: Práticas recomendadas de P e R
+              href: natural-language/q-and-a-best-practices.md
+            - name: Limitações de P e R
+              href: natural-language/q-and-a-limitations.md
         - name: Solucionar problemas
           items:
             - name: Solucionar problemas de importação de bancos de dados do Access e planilhas do Excel no Power BI Desktop e no Power Query
@@ -425,7 +443,7 @@
           href: service-tutorial-use-cognitive-services.md
         - name: Integração do Machine Learning
           href: service-tutorial-invoke-machine-learning-model.md
-        - name: Criar um modelo de machine learning (versão prévia)
+        - name: Criar um modelo de machine learning
           href: service-tutorial-build-machine-learning-model.md
         - name: Atualizar dados do SQL Server
           href: service-gateway-sql-tutorial.md
@@ -699,7 +717,7 @@
               href: service-machine-learning-integration.md
             - name: Usar Serviços Cognitivos no Power BI
               href: service-cognitive-services.md
-            - name: Machine Learning Automatizada no Power BI (Versão Prévia)
+            - name: Machine Learning Automatizado no Power BI
               href: service-machine-learning-automated.md
         - name: Linhagem de dados
           href: service-data-lineage.md
@@ -1143,6 +1161,8 @@
       href: guidance/import-modeling-data-reduction.md
     - name: Função DIVIDE versus operador dividir (/)
       href: guidance/dax-divide-function-operator.md
+    - name: A importância da dobragem de consultas
+      href: guidance/power-query-folding.md
     - name: Uso apropriado de funções de erro
       href: guidance/dax-error-functions.md
     - name: Práticas recomendadas para fluxos de dados
