commit translated contents

--- a/powerbi-docs/admin/index.yml
+++ b/powerbi-docs/admin/index.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Landing
-title: Power BI para administradores
-summary: A documentação do Power BI fornece informações de especialistas e respostas para atender às suas necessidades, independentemente de como você usa o Power BI.
+title: Documentação para administradores do Power BI
+summary: A documentação para administradores do Power BI fornece informações de especialistas e respostas para atender às suas necessidades, independentemente de como você usa o Power BI.
 metadata:
-  title: Power BI para administradores
-  description: A documentação do Power BI fornece informações de especialistas e respostas para atender às suas necessidades, independentemente de como você usa o Power BI.
+  title: Documentação para administradores do Power BI
+  description: A documentação para administradores do Power BI fornece informações de especialistas e respostas para atender às suas necessidades, independentemente de como você usa o Power BI.
   services: powerbi
   ms.service: powerbi
   ms.subservice: powerbi-service
@@ -11,13 +11,13 @@ metadata:
   ms.collection: collection
   author: maggiesMSFT
   ms.author: maggies
-  ms.date: 10/04/2019
-  ms.openlocfilehash: 8209cc755b33887c533e9f90b9b1cd7a5021490e
-  ms.sourcegitcommit: d02de4ca33d865aee3e3e764b98f221950cb0a10
+  ms.date: 10/25/2019
+  ms.openlocfilehash: 533b8dc4ccc800e3120f3a01c6069e224c2df27e
+  ms.sourcegitcommit: ee0ea65de52b38e5976d6eb15516b0b240fa40f9
   ms.translationtype: HT
   ms.contentlocale: pt-BR
-  ms.lasthandoff: 10/10/2019
-  ms.locfileid: "72245640"
+  ms.lasthandoff: 10/26/2019
+  ms.locfileid: "72959520"
 landingContent:
 - title: Sobre o Power BI para administradores
   linkLists:
@@ -29,7 +29,7 @@ landingContent:
     links:
     - text: Função de administração no Office 365
       url: ../service-admin-role.md
-- title: Começar
+- title: Introdução
   linkLists:
   - linkListType: concept
     links:
