--- a/powerbi-docs/admin/TOC.yml
+++ b/powerbi-docs/admin/TOC.yml
@@ -1,4 +1,6 @@
-- name: Administração do Power BI
+- name: Documentação para administradores do Power BI
+  href: index.yml
+  expanded: true
   items:
     - name: Visão geral
       expanded: true
@@ -8,7 +10,7 @@
     - name: Conceitos
       expanded: true
       items:
-        - name: Função de administração no Office 365
+        - name: Função de administração no Microsoft 365
           href: ../service-admin-role.md
         - name: Perguntas frequentes
           href: ../service-admin-faq.md
@@ -22,9 +24,9 @@
               href: ../service-admin-licensing-organization.md
             - name: Comprar o Power BI Pro
               href: ../service-admin-purchasing-power-bi-pro.md
-            - name: Inscrever-se com uma Avaliação do Office 365
+            - name: Inscreva-se com uma avaliação do Microsoft 365
               href: ../service-admin-signing-up-for-power-bi-with-a-new-office-365-trial.md
-            - name: Adicionar o Power BI com um parceiro do Office 365
+            - name: Adicionar o Power BI com um parceiro do Microsoft 365
               href: ../service-admin-syndication-partner.md
         - name: Usando o portal de administração
           href: ../service-admin-portal.md
@@ -32,19 +34,19 @@
           href: ../service-admin-where-is-my-tenant-located.md
         - name: Encontrar usuários que se conectaram
           href: ../service-admin-access-usage.md
-        - name: Auditando o Power BI
+        - name: Auditoria
           href: ../service-admin-auditing.md
         - name: Monitorar a integridade do serviço
           href: ../service-admin-health.md
-        - name: Fechamento da sua conta do Power BI
+        - name: Fechar sua conta
           href: ../service-admin-closing-your-account.md
-        - name: Power BI e ExpressRoute
+        - name: ExpressRoute
           href: ../service-admin-power-bi-expressroute.md
         - name: Uso do B2B do Azure AD
           href: ../service-admin-azure-ad-b2b.md
-        - name: Segurança em nível de linha com o Power BI
+        - name: Segurança em nível de linha
           href: ../service-admin-rls.md
-        - name: Workspace arquivado do Power BI
+        - name: Workspace arquivado
           href: ../service-admin-power-bi-archived-workspace.md
         - name: Configurar aplicativos móveis com o Intune
           href: ../service-admin-mobile-intune.md
